# twilio_rust

./: Cargo.toml  README.md
examples/example_1/: Cargo.toml  README.md
examples/example_1/src/: create_sms.rs  create_whatsapp.rs  delete_media_message.rs  delete_message.rs  fetch_media_message.rs  fetch_message.rs  fetch_multiple_media_message.rs  fetch_multiple_messages.rs  main.rs  update_message.rs
src/: lib.rs
src/delete_media_message/: delete_media_message.rs
src/delete_message/: delete_message.rs
src/fetch_media_message/: fetch_media_message.rs
src/fetch_message/: fetch_message.rs
src/models/: models.rs
src/sms/: create_sms.rs
src/update_message/: update_message.rs
src/util/: util.rs
src/whatsapp/: create_whatsapp.rs
