[package]
name = "example_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
twilio_rust = { path = "../../" }
dotenv = "0.15.0"
